<resources>
    <string name="app_name">TipTime</string>
    <string name="coste_del_servicio">Coste del Servicio</string>
    <string name="como_ha_sido_el_servicio">Como ha sido el servicio?</string>
    <string name="amazing_20">Amazing(20%)</string>
    <string name="good_18">Good(18%)</string>
    <string name="okay_15">Okay(15%)</string>
    <string name="calcular">Calcular</string>
    <string name="propina_resultante">Propina resultante: %s</string>
    <string name="redondear_propina">Redondear propina?</string>
    <string name="primary_color">Primary color</string>
    <string name="button">Button</string>
    <string name="secondary_color">Secondary color</string>
    <string name="email_icon">email icon</string>
</resources>